# remote-program

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: 3rd.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
src/client/win/: imgui_logger.cpp  imgui_logger.h  imgui_window.cpp  imgui_window.h
src/common/: CMakeLists.txt  control.h  encoding.cpp  encoding.h  logger.h  macros_magic.h  scoped_task_runner.cpp  scoped_task_runner.h  task.h  task_consumer.h  task_producer.h  task_runner.cpp  task_runner.h  task_worker.cpp  task_worker.h  thread.cpp  thread.h  view.h
src/manager/: CMakeLists.txt  control_manager.cpp  control_manager.h  session_manager.cpp  session_manager.h  setting_manager.cpp  setting_manager.h  view_manager.cpp  view_manager.h
src/message_loop/: CMakeLists.txt  message_loop.cpp  message_loop.h  message_loop_task_runner.cpp  message_loop_task_runner.h  message_pump.h  message_pump_asio.cpp  message_pump_asio.h  message_pump_default.cpp  message_pump_default.h  message_pump_dispatcher.h  message_pump_ui.cpp  message_pump_ui.h  pending_task.cpp  pending_task.h
src/net/: CMakeLists.txt  network_channel.cpp  network_channel.h  session.cpp  session.h  tcp_channel.cpp  tcp_channel.h  tcp_keep_alive.h  tcp_server.cpp  tcp_server.h  variable_size.cpp  variable_size.h  write_task.h
src/plugins/file/: CMakeLists.txt  file_control.cpp  file_control.h  file_define.h  file_explorer.h  file_handler.h  file_impl.cpp  file_impl.h  file_view.cpp  file_view.h
src/plugins/host/: CMakeLists.txt  host_control.cpp  host_control.h  host_define.h  host_impl.cpp  host_impl.h  host_view.cpp  host_view.h
src/plugins/screen/: CMakeLists.txt  screen_control.cpp  screen_control.h  screen_define.h  screen_view.cpp  screen_view.h  win_screen.cpp  win_screen.h
src/plugins/shell/: CMakeLists.txt  shell_control.cpp  shell_control.h  shell_define.h  shell_view.cpp  shell_view.h  win_shell.cpp  win_shell.h
src/rpc/: codec.h  function_traits.h  rpc_client.h  rpc_server.h
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
src/utils/: CMakeLists.txt  binary_overlay.cpp  binary_overlay.h
